--- a/client/package.json
+++ b/client/package.json
@@ -75,6 +75,7 @@
     "gatsby-plugin-postcss": "4.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
     "gatsby-plugin-remove-serviceworker": "1.0.0",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-remark-prismjs": "5.11.0",
     "gatsby-source-filesystem": "3.14.0",
     "gatsby-transformer-remark": "4.11.0",
@@ -124,6 +125,7 @@
     "stream-browserify": "3.0.0",
     "tone": "14.7.77",
     "typescript": "4.6.2",
+    "use-query-params": "^2.2.1",
     "util": "0.12.4",
     "uuid": "8.3.2",
     "validator": "13.7.0"
